--- a/parks.html
+++ b/parks.html
@@ -10,6 +10,7 @@
 
 <body>
   <header>
+    <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
