--- a/parks.html
+++ b/parks.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+
   <header>
-    <a href="#main-content" class="skip-link">Skip to Main Content</a>
+      <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -22,8 +23,8 @@
     <h1>Michigan Parks</h1>
 
   </header>
-  <main>
-    <div>
+  <main id="main-content">
+    <div class="flex">
       <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
       <img src="images/bacon_near_the_fort.png"
